// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMoreButton renders correctly when at maxHeight 1`] = `
<div
  className="container"
>
  <button
    aria-label="Show less"
    className="showMore"
    data-test="showmore-button"
    onClick={[Function]}
  >
    <ChevronUp />
  </button>
</div>
`;

exports[`ShowMoreButton renders correctly when not at maxHeight 1`] = `
<div
  className="container"
>
  <button
    aria-label="Show more"
    className="showMore"
    data-test="showmore-button"
    onClick={[Function]}
  >
    <ChevronDown />
  </button>
</div>
`;
